# SADP-Tracker

./: .gitignore  README.md  build.py  fetch_data.py  index.html  pyproject.toml
.github/workflows/: update-data.yml
data/: archived_data.json  data.json
supplier/: siemens-sadp.html
templates/: archived.html  base.html  index.html  supplier.html
tests/: test_fetch_data.py
web/static/css/: style.css
