[project]
name = "sadp-tracker"
version = "1.0.0"
description = "SADP Tracker - CVE Supplier ADP Pilot Dashboard"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["cve", "sadp", "supplier", "adp", "vulnerability", "pilot"]
authors = [
    {name = "RogoLabs"}
]
dependencies = [
    "jinja2>=3.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# ============================================================================
# Ruff Configuration
# ============================================================================
[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4

exclude = [
    ".git",
    ".github",
    "__pycache__",
    "web",
    "sadp-pilot",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4"]
ignore = ["E501", "B008", "B905"]

[tool.ruff.lint.isort]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ============================================================================
# Pytest
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]
